update new page and data

--- a/dynamic-generator.html
+++ b/dynamic-generator.html
@@ -5,10 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JD Sons Offline Order</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="landing-styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://unpkg.com/docx@8.2.2/build/index.min.js"></script>
 </head>
 <body>
+    <!-- Navigation Header -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="nav-brand">
+                <h2>🏪 JD Sons Document Generator</h2>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="index.html" class="nav-link">🏠 Home</a></li>
+                <li><a href="dynamic-generator.html" class="nav-link active">📊 Customer Orders</a></li>
+                <li><a href="flexible-generator.html" class="nav-link">🎯 Flexible Generator</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
         <header>
             <h1>JD Sons Offline Order</h1>
